--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <h1>
     <font color="blue">Блог про літні канікули</font>
   </h1>
-  <a href="https://kurs-ss-vilboa.github.io/-3-1-2/index2.html">Почитати про автора</a>
+  <a href="https://logikaschoolmogilev.github.io/blog/index2.html">Почитати про автора</a>
   <p>Цього літа я вперше був на морі, збулася моя мрія. 
   <img src="https://mars.algoritmika.org/uploads/2020/09/blue-309761_640_0_1601486559.png" width="60px" height="20px"/></p> 
   <p>Їздили всією сім'єю на десять днів у Сочі. На березі моря я знайшов гарні мушлі.
