--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,6 @@
 
 <html>
-  <h1 font color="blue">Блогер Тараса</h1>
+  <h1 font color="blue">Блогер Тарас</h1>
   <a href="https://logikaschoolmogilev.github.io/blog/">Повернутись на головну сторінку</a>
   <p>Вітаю! Я веду блог уже 2 місяці, де розповідаю різні історії.
    Я навчаюсь у школі, а щонеділі відвідую курс Алгоритміки Візуальне програмування. Мені дуже подобається робити ігри, мультики, а нещодавно я захопився сайтами.</p>
